--- a/styles.css
+++ b/styles.css
@@ -12107,6 +12107,7 @@ button.yolo-chat-user-input-submit-button-circle.is-stop:hover:not(:disabled) {
 .yolo-chat-mode-select-item__label {
   font-size: 12px;
   font-weight: 500;
+  line-height: 18px;
   color: var(--text-normal);
 }
 
@@ -12130,6 +12131,7 @@ button.yolo-chat-user-input-submit-button-circle.is-stop:hover:not(:disabled) {
 
 button.yolo-chat-mode-select-item {
   width: 100%;
+  height: auto;
   text-align: left;
   font: inherit;
   color: inherit;
